# mr_autoauto

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  project_plan.md
config/: assets.toml  backgrounds.toml  commentator.toml  enemy_types.toml  environments.toml  game.toml  segments.toml  spawners.toml  upgrades.toml  vehicles.toml  weapons.toml
reference/: voice_api_example.txt
scripts/: build_web.ps1  serve_web.ps1
src/: main.rs
src/assets/: mod.rs
src/commentary_stub/: mod.rs
src/config/: mod.rs
src/debug/: mod.rs
src/gameplay/: mod.rs
src/gameplay/combat/: mod.rs
src/gameplay/enemies/: mod.rs
src/gameplay/feedback/: mod.rs
src/gameplay/pickups/: mod.rs
src/gameplay/sfx/: mod.rs
src/gameplay/upgrades/: mod.rs
src/gameplay/vehicle/: mod.rs  model.rs  runtime.rs  scene.rs  terrain.rs
src/states/: mod.rs
src/ui/: mod.rs
src/web/: mod.rs
