[package]
name = "mr_autoauto"
version = "0.1.0"
edition = "2021"

[features]
default = []
gaussian_splats = ["dep:bevy_gaussian_splatting"]

[dependencies]
bevy = { version = "0.17", default-features = true, features = ["jpeg"] }
bevy_egui = "0.38.1"
bevy_rapier2d = "0.32"
bevy_gaussian_splatting = { version = "6.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[patch.crates-io]
bevy_gaussian_splatting = { path = "vendor/bevy_gaussian_splatting" }
