[package]
name = "mr_autoauto"
version = "0.1.0"
edition = "2021"

[features]
default = ["gaussian_splats"]
gaussian_splats = ["dep:bevy_gaussian_splatting"]

[dependencies]
bevy = { version = "0.17", default-features = true, features = ["jpeg", "wav", "webgpu"] }
bevy_egui = "0.38.1"
bevy_rapier2d = "0.32"
bevy_gaussian_splatting = { version = "6.0", optional = true, default-features = false, features = ["io_flexbuffers", "io_ply", "planar", "buffer_storage", "sh3", "sort_std", "file_asset", "web_asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[patch.crates-io]
bevy_gaussian_splatting = { path = "vendor/bevy_gaussian_splatting" }
